--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,17 +25,23 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // Support Libraries
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
-    compile 'com.google.firebase:firebase-ads:10.0.1'
-    // To display GIFs
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+
+    // Firebase
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+
+    // Extras
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+
     testCompile 'junit:junit:4.12'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
