Project Review Changes --Add all strings in strings.xml --Modified .gitignore to allow .jks files --Change absolute path to relative path of keystore file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'udacity'
             keyPassword 'password'
-            storeFile file('/home/rajat/Desktop/Nanodegree/Capstone-Project/keystore.jks')
+            storeFile file("$rootDir/keystore.jks")
             storePassword 'password'
         }
     }
