--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,9 @@ android:
       - build-tools-25.0.3
       - android-25
 
-script: "./gradlew build --stacktrace"
+install:
+    - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2"
+    - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
+
+script:
+    - ./gradlew build --stacktrace
