Post Travis notifications to slack channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ install:
 
 script:
     - ./gradlew build --stacktrace
+
+notifications:
+    slack: rajatgoyal715:aN1ypVFqeAeZdL400Kk4Fpub#puzzle15
