Add Play Games signin (WIP)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha02'
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.android.gms:play-services-games:16.0.0'
     // Extras
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
